# vCognetics

./: .gitmodules  README.md
1_Bash-Scripting/Q1/: Q1.sh
1_Bash-Scripting/Q3/: Q3.sh  system_usage_report.txt
1_Bash-Scripting/Q4/: Q4.sh
1_Bash-Scripting/test/: hello.txt  helloWorld.txt
3_Docker/HelloWorld/DockerProject_python/: Dockerfile
3_Docker/task-2/: Dockerfile
3_Docker/task-3/: Dockerfile  DummyTask  docker-compose.yml
4_Python/: Python Traning Task 2023.docx  msg_latency.txt
4_Python/Python-Unit-Testing/: test.py
4_Python/Q1/: q1.py
4_Python/Q2/: q2.py
4_Python/Q3/: Output.json  q3.py
4_Python/Q4/: q4.py
4_Python/Q5/: my_dummy_file.txt  q5_2.py
4_Python/Q6/: q6.py  q6_module.py
4_Python/Q7/: q7.py
4_Python/Q8/: text.txt
4_Python/Q9/: q9_client.html  q9_client.py  q9_server.py
4_Python/test/: test1.py  test2.py  test3.py
5_Cpp/1_GCC-and-Cmake-tasks/1_GCC-Task/: commands.txt  mymath.hpp
5_Cpp/1_GCC-and-Cmake-tasks/1_GCC-Task/Example/: DynoLib.cpp  DynoLib.h
5_Cpp/1_GCC-and-Cmake-tasks/2_CMake-Tasks/Task-2/: commands.txt
5_Cpp/1_GCC-and-Cmake-tasks/2_CMake-Tasks/Task-3/: CMakeLists.txt  sources.txt
5_Cpp/2_Unit-Testing-and-Benchmarking-Task/: README.md  temp.py
5_Cpp/2_Unit-Testing-and-Benchmarking-Task/benchmark/: CMakeLists.txt  benchmark.cpp
5_Cpp/2_Unit-Testing-and-Benchmarking-Task/include/: codility.h
5_Cpp/2_Unit-Testing-and-Benchmarking-Task/unittest/: CMakeLists.txt
5_Cpp/3_Codility-Tasks/: CMakeLists.txt
5_Cpp/3_Codility-Tasks/Lesson-1_Iterations/: BinaryGap.cpp
5_Cpp/3_Codility-Tasks/Lesson-2_Arrays/: CyclicRotation.cpp  OddOccurrencesInArray.cpp
5_Cpp/3_Codility-Tasks/Lesson-3_Time-Complexity/: FrogJmp.cpp  PermMissingElem.cpp
5_Cpp/3_Codility-Tasks/Lesson-4_Counting-Elements/: FrogRiverOne.cpp  MaxCounters.cpp
5_Cpp/3_Codility-Tasks/Lesson-5_Prefix-Sums/: CountDiv.cpp  PassingCars.cpp
5_Cpp/Cards/Advanced-Cpp-Concepts/: student.cpp
5_Cpp/Cards/Benchmarking-in-Cpp/: commands.txt
5_Cpp/Cards/CMake-Test-Task/: CMakeLists.txt
5_Cpp/Cards/Introduction-to-GCC/: hello_world.cpp
5_Cpp/Cards/Smart-Pointers-in-Cpp/: CMakeLists.txt
5_Cpp/Cards/Unit-Testing-in-Cpp/: CMakeLists.txt  main.cpp  whattotest.cpp
6_C/1_UDP-Implementation/: client  client.cpp  server  server.cpp
Training/1 Bash Scripting/: .~lock.Bash Scripting tasks.docx#
Training/1 Bash Scripting/Q2/: Q2.sh  output.txt
Training/1 Bash Scripting/Q3/: Q3.sh
Training/1 Bash Scripting/Q4/: Q4.sh
Training/1 Bash Scripting/Q5/: Q5.sh
Training/1 Bash Scripting/Q6/: Q6.sh
Training/1_Bash Scripting/Q5/: Q5.sh
Training/1_Bash Scripting/Q6/: Q6.sh
Training/1_Bash-Scripting/Q4/: grep
Training/1_Bash-Scripting/Q6/: formatted.csv
Training/2 Git/: .~lock.Git Task.docx#  Git Task.docx  Git Tasks.docx
Training/2023.05.03/: Bash Scripting tasks.docx  Linux Commands.txt
Training/2023.05.03/Q1/: Q1.sh
Training/2023.05.03/Q3/: Q3.sh
Training/2023.05.03/Q6/: Q6.sh
Training/2_Git/task-c/: src.txt
Training/3 Docker/my-docker-project/: main.cpp
Training/3_Docker/my-docker-project/: .main.cpp.swp
Training/3_Docker/task-3/: Dockerfile  main.cpp
Training/4_Python/: .~lock.Python Traning Task 2023.docx#
Training/4_Python/2_Variables-and-Arithmetic-Expressions/: task1.py  task2.py
Training/4_Python/Q1/: main.py
Training/4_Python/Q2/: main.py  q2.py
Training/4_Python/Q3/: Input.json
Training/4_Python/Q4/: q4.py
Training/4_Python/Q5/: q5_1.py
Training/4_Python/Q6/: q6.py
Training/4_Python/Q7/: q7.py
Training/4_Python/Q8/: q8.py
Training/4_Python/Q9/: output_messages_client.json  output_messages_server.json  q9_client.py  q9_server.py
Training/5_Cpp/1_GCC-and-Cmake-tasks/2_CMake-Tasks/Task-1/: .gitignore  CMakeLists.txt
Training/5_Cpp/1_GCC-and-Cmake-tasks/2_CMake-Tasks/Task-2/: .gitignore  CMakeLists.txt
Training/5_Cpp/1_GCC-and-Cmake-tasks/2_CMake-Tasks/Task-2/boost/src/Boost-stamp/: Boost-gitclone-lastrun.txt
Training/5_Cpp/1_GCC-and-Cmake-tasks/2_CMake-Tasks/Task-2/boost/tmp/: Boost-gitclone.cmake  Boost-mkdirs.cmake
Training/5_Cpp/2_Unit-Testing-and-Benchmarking-Task/: .gitignore  CMakeLists.txt
Training/5_Cpp/2_Unit-Testing-and-Benchmarking-Task/src/: codility.cpp  main.cpp
Training/5_Cpp/2_Unit-Testing-and-Benchmarking-Task/unittest/: unittest.cpp
Training/5_Cpp/3_Codility-Tasks/: .gitignore  CMakeLists.txt
Training/5_Cpp/3_Codility-Tasks/Lesson-2_Arrays/: OddOccurrencesInArray.cpp
Training/5_Cpp/3_Codility-Tasks/Lesson-3_Time-Complexity/: TapeEquilibrium.cpp
Training/5_Cpp/3_Codility-Tasks/Lesson-4_Counting-Elements/: MissingInteger.cpp  PermCheck.cpp
Training/5_Cpp/Cards/: .gitignore
Training/5_Cpp/Cards/Advanced-Cpp-Concepts/: .gitignore  CMakeLists.txt  main.cpp  student.h  whitelist.cpp  whitelist.h  whitelist.hpp
Training/5_Cpp/Cards/Benchmarking-in-Cpp/: CMakeLists.txt  benchmark_test.cpp  commands.txt  main.cpp
Training/5_Cpp/Cards/CMake-Test-Task/: .gitignore  CMakeLists.txt
Training/5_Cpp/Cards/CMake-Test-Task/app/: main.cpp
Training/5_Cpp/Cards/CMake-Test-Task/include/: student.h
Training/5_Cpp/Cards/CMake-Test-Task/src/: student.cpp
Training/5_Cpp/Cards/Smart-Pointers-in-Cpp/: CMakeLists.txt  main.cpp  rakurai.cpp  rakurai.hpp  student.cpp  student.hpp
Training/5_Cpp/Cards/Smart-Pointers-in-Cpp/app/: main.cpp
Training/5_Cpp/Cards/Smart-Pointers-in-Cpp/include/: database.h  rakurai.h
Training/5_Cpp/Cards/Smart-Pointers-in-Cpp/src/: database.cpp  rakurai.cpp  student.cpp
Training/5_Cpp/Cards/Unit-Testing-in-Cpp/: CMakeLists.txt  gtest.cpp  main.cpp  student.hpp  whitelist.cpp  whitelist.hpp
Training/5_cpp/1_GCC-and-Cmake-tasks/2_CMake-Tasks/Task-2/: .gitignore  CMakeLists.txt  commands.txt  main.cpp
Training/5_cpp/1_GCC-and-Cmake-tasks/2_CMake-Tasks/Task-3/1/: CMakeLists.txt
Training/5_cpp/Cards/2_Introduction-to-GCC/: CMakeLists.txt  hello_world.cpp  main.cpp
Training/5_cpp/Cards/2_Introduction-to-GCC/libraries/: CMakeLists.txt  calculator.hpp  divide.cpp  subtract.cpp  sum.hpp
Training/6_C/1_UDP-Implementation/: client.cpp  server.cpp
(+28 files in other folders)
