cmake_minimum_required(VERSION 3.0)
project(Codility-Tasks)

add_executable(BinaryGap Lesson-1_Iterations/BinaryGap.cpp)
add_executable(CyclicRotation Lesson-2_Arrays/CyclicRotation.cpp)
add_executable(OddOccurrencesInArray Lesson-2_Arrays/OddOccurrencesInArray.cpp)
add_executable(FrogJmp Lesson-3_Time-Complexity/FrogJmp.cpp)
