cmake_minimum_required(VERSION 3.5)
project(Codility-Tasks)

add_executable(BinaryGap Lesson-1_Iterations/BinaryGap.cpp)

add_executable(CyclicRotation Lesson-2_Arrays/CyclicRotation.cpp)
add_executable(OddOccurrencesInArray Lesson-2_Arrays/OddOccurrencesInArray.cpp)

add_executable(FrogJmp Lesson-3_Time-Complexity/FrogJmp.cpp)
add_executable(PermMissingElem Lesson-3_Time-Complexity/PermMissingElem.cpp)
add_executable(TapeEquilibrium Lesson-3_Time-Complexity/TapeEquilibrium.cpp)

add_executable(FrogRiverOne Lesson-4_Counting-Elements/FrogRiverOne.cpp)
add_executable(PermCheck Lesson-4_Counting-Elements/PermCheck.cpp)
add_executable(MaxCounters Lesson-4_Counting-Elements/MaxCounters.cpp)