cmake_minimum_required(VERSION 3.20)
project(HelloWorld)
add_subdirectory(libraries)
add_executable(hello_world hello_world.cpp)
add_executable(main main.cpp)
target_include_directories(hello_world PRIVATE ${CMAKE_SOURCE_DIR}/libraries)
target_include_directories(main PRIVATE ${CMAKE_SOURCE_DIR}/libraries)
target_link_libraries(hello_world PRIVATE my_sum)
target_link_libraries(main PRIVATE calculator)